[package]
name = "rust-mc-bot"
version = "0.1.0"
authors = ["Eoghanmc22 <eoghanmc@icloud.com>"]
edition = "2018"

[profile.release]
debug = 2

[dependencies]
# Networking
mio = { version = "0.8", features = ["os-poll", "net"] }
libdeflater = "0.10"

# UX
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"

# Misc
rand = "0.8"
