[package]
name = "rust-mc-bot"
version = "0.1.0"
authors = ["Eoghanmc22 <eoghanmc@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2

[dependencies]
mio = { version = "1.0", features = ["os-poll", "net"] }
# flate2 = { version = "1.0.19", features = ["zlib"], default-features = false }
libdeflater = "1.20"
num_cpus = "1.16"
rand = "0.8"

uuid = { version = "1.8", features = ["v4", "fast-rng"] }
